WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112312
Platform incorrectly indentified as PPC Mac OS X on Intel Mac 64-bit
https://bugs.webkit.org/show_bug.cgi?id=112312
Summary
Platform incorrectly indentified as PPC Mac OS X on Intel Mac 64-bit
Jonathan Liu
Reported
2013-03-13 19:37:30 PDT
In several files: -Source/WebCore/platform/gtk/UserAgentGtk.cpp -Source/WebKit/efl/ewk/ewk_settings.cpp -Source/WebKit/wx/WebKitSupport/FrameLoaderClientWx.cpp There is a check "#if CPU(X86)" to determine if the platform is "Intel Mac OS X". On Intel Mac 64-bit, CPU(X86) is false and CPU(X86_64) is true. Several other places check it correctly using "#if CPU(X86) || CPU(X86_64). The files just need to be corrected to also check for CPU(X86_64).
Attachments
Patch
(3.63 KB, patch)
2013-03-13 19:46 PDT
,
Jonathan Liu
no flags
Details
Formatted Diff
Diff
Patch
(3.65 KB, patch)
2013-03-13 19:52 PDT
,
Jonathan Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Liu
Comment 1
2013-03-13 19:46:48 PDT
Created
attachment 193041
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-13 19:50:22 PDT
Attachment 193041
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/gtk/UserAgentGtk.cpp', u'Source/WebKit/efl/ChangeLog', u'Source/WebKit/efl/ewk/ewk_settings.cpp', u'Source/WebKit/wx/ChangeLog', u'Source/WebKit/wx/WebKitSupport/FrameLoaderClientWx.cpp']" exit_code: 1 Source/WebKit/efl/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] Source/WebKit/wx/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jonathan Liu
Comment 3
2013-03-13 19:52:58 PDT
Created
attachment 193042
[details]
Patch
Simon Hausmann
Comment 4
2013-03-14 01:55:21 PDT
Comment on
attachment 193042
[details]
Patch I suggest to use the same macros on the Qt side, too :)
WebKit Review Bot
Comment 5
2013-03-14 01:59:42 PDT
Comment on
attachment 193042
[details]
Patch Clearing flags on attachment: 193042 Committed
r145795
: <
http://trac.webkit.org/changeset/145795
>
WebKit Review Bot
Comment 6
2013-03-14 01:59:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug