Fix detection of Intel Mac OS X platform on Intel Mac 64-bit https://bugs.webkit.org/show_bug.cgi?id=112312

Patch by Jonathan Liu <net147@gmail.com> on 2013-03-14
Reviewed by Simon Hausmann.

Source/WebCore:

* platform/gtk/UserAgentGtk.cpp:
(WebCore::platformVersionForUAString):

Source/WebKit/efl:

* ewk/ewk_settings.cpp:
(_ewk_settings_webkit_os_version_get):

Source/WebKit/wx:

* WebKitSupport/FrameLoaderClientWx.cpp:
(WebCore::agentOS):

Canonical link: https://commits.webkit.org/130640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145795 268f45cc-cd09-0410-ab3c-d52691b4dbfc