Source/WebKit/wx/WebKitSupport/FrameLoaderClientWx.cpp
@@ -535,7 +535,7 @@ void FrameLoaderClientWx::setTitle(const StringWithDirection& title, const KURL&
 static String agentOS()
 {
 #if OS(DARWIN)
-#if CPU(X86)
+#if CPU(X86) || CPU(X86_64)
     return "Intel Mac OS X";
 #else
     return "PPC Mac OS X";
